fix for CHLK-3534 Teacher. Grades. Standards. Standards with too long name will be out off the field

--- a/Chalkable.Web/assets/sass2/0_ephir/_body.sass
+++ b/Chalkable.Web/assets/sass2/0_ephir/_body.sass
@@ -13,6 +13,10 @@ body
 *
   overflow: visible
 
+div[data-tooltip]
+  text-overflow: ellipsis !important
+  overflow: hidden !important
+
 .x-hidden
   display: none !important
   visibility: none
